
* SOLR-16925: Fix indentation for JacksonJsonWriter (Houston Putman)

* SOLR-16701: Fix race condition on PRS enabled collection deletion (Patson Luk)

* SOLR-16991: Concurrent requests failing JWT authentication in Admin UI intermittently (Lamine Idjeraoui, janhoy)

* SOLR-16997: OTEL configurator NPE when SOLR_HOST not set (janhoy)

Dependency Upgrades
---------------------

* PR#1846: Update io.opentelemetry to 1.29.0 (Alex Deparvu)

Other Changes
---------------------

* SOLR-16842: Eliminate special case code in Solr CLI by introducing explicit VersionTool.java.  (Eric Pugh, Will White)

* SOLR-16856: The default auto-soft-commit time has been set to 3 seconds. Previously, auto-soft-commit was disabled by default. (Houston Putman)

* PR#1629: Fix typos in org.apache.solr.core package (Andrey Bozhko, Marcus Eagan)

* SOLR-16803: Remove dependencies on methods defined in the SimplePostTool from Solr core and solrj modules.

* SOLR-16915: Lower the AffinityPlacementPlugin's default minimalFreeDiskGB to 5 GB (Houston Putman)

* SOLR-16623: new SolrJettyTestRule for tests needing HTTP or Jetty. (David Smiley, Joshua Ouma)

* SOLR-16979: BATS integration tests now start solr instances on a randomly selected port (janhoy)

* SOLR-16978: Be case insensitive when parsing booleans from text (Tomás Fernández Löbbe)

* SOLR-16960: Tests should sometimes run with a Tracer (not no-op) (Alex Deparvu)

==================  9.3.0 ==================

Upgrade Notes
---------------------

* SOLR-13396: Add property to control the deletion of unknown cores.  The default setting is to not delete unknown cores.
  This is a change to behaviour introduced in Solr 7.3.1 by SOLR-12066. To continue using the previous behaviour, Solr can be
  started with the system property `solr.deleteUnknownCores` set to `true`. (Colvin Cowie, janhoy)

New Features
---------------------