@@ -96,6 +96,13 @@ public class SolrExporter {
           + ARG_NUM_THREADS_DEFAULT
           + ".";
 
+  private static final String[] ARG_CREDENTIALS_FLAGS = {"-u", "--credentials"};
+  private static final String ARG_CREDENTIALS_METAVAR = "CREDENTIALS";
+  private static final String ARG_CREDENTIALS_DEST = "credentials";
+  private static final String ARG_CREDENTIALS_DEFAULT = "";
+  private static final String ARG_CREDENTIALS_HELP =
+      "Specify the credentials in the format username:password. Example: --credentials solr:SolrRocks";
+
   public static final CollectorRegistry defaultRegistry = new CollectorRegistry();
 
   private final int port;
@@ -161,7 +168,7 @@ public class SolrExporter {
       SolrScrapeConfiguration configuration,
       PrometheusExporterSettings settings,
       String clusterId) {
-    SolrClientFactory factory = new SolrClientFactory(settings);
+    SolrClientFactory factory = new SolrClientFactory(settings, configuration);
 
     switch (configuration.getType()) {
       case STANDALONE:
@@ -242,6 +249,14 @@ public class SolrExporter {
         .setDefault(ARG_CLUSTER_ID_DEFAULT)
         .help(ARG_CLUSTER_ID_HELP);
 
+    parser
+        .addArgument(ARG_CREDENTIALS_FLAGS)
+        .metavar(ARG_CREDENTIALS_METAVAR)
+        .dest(ARG_CREDENTIALS_DEST)
+        .type(String.class)
+        .setDefault(ARG_CREDENTIALS_DEFAULT)
+        .help(ARG_CREDENTIALS_HELP);
+
     try {
       Namespace res = parser.parseArgs(args);
 
@@ -264,6 +279,14 @@ public class SolrExporter {
       String clusterId = res.getString(ARG_CLUSTER_ID_DEST);
       if (StrUtils.isNullOrEmpty(clusterId)) {
         clusterId = defaultClusterId;
+      }
+
+      if (!res.getString(ARG_CREDENTIALS_DEST).isEmpty()) {
+        String credentials = res.getString(ARG_CREDENTIALS_DEST);
+        if (credentials.indexOf(':') > 0) {
+          String[] credentialsArray = credentials.split(":", 2);
+          scrapeConfiguration.withBasicAuthCredentials(credentialsArray[0], credentialsArray[1]);
+        }
       }
 
       SolrExporter solrExporter =
